src/objects/PANG_Data_Asset__c.object
<CustomObject>
    <description>Inventory of real world data assets</description>
    <fields>
        <fullName>Ability_Link_to_Patient_Registries_Comm__c</fullName>
        <label>Ability Link to Patient Registries Comm</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ability_to_Link_to_Patient_Registries__c</fullName>
        <label>Ability to Link to Patient Registries</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ability_to_share_with_a_3rd_Party_Commen__c</fullName>
        <label>Data can be shared w TPO Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ability_to_share_with_a_3rd_Party__c</fullName>
        <inlineHelpText>For Analytical Services</inlineHelpText>
        <label>Data can be shared w TPO for analysis?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Access_to_Medical_Charts_Comment__c</fullName>
        <label>Access to Medical Charts  Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Access_to_Medical_Charts__c</fullName>
        <label>Access to Medical Charts</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Access_to_Physician_Notes_or_Others_Comm__c</fullName>
        <label>Access to Physician Notes or Others Comm</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Access_to_Physician_Notes_or_Others__c</fullName>
        <label>Access to Physician Notes or Others</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Accessed_for_In_house_Analysis_Comment__c</fullName>
        <label>Accessed for In-house Analysis Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Accessed_for_In_house_Analysis__c</fullName>
        <label>Accessed for In-house Analysis</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_Status_Comment__c</fullName>
        <label>Asset Status Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Asset_Status__c</fullName>
        <label>Asset Status</label>
        <picklist>
            <picklistValues>
                <fullName>Documentation for Awareness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluation in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licensed In-House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Established Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outsourced Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluated Did Not Acquire or Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_Sub_Status_Comment__c</fullName>
        <label>Asset Sub-Status Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Asset_Sub_Status__c</fullName>
        <label>Asset Sub-Status</label>
        <picklist>
            <controllingField>Asset_Status__c</controllingField>
            <picklistValues>
                <fullName>multi-use data asset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>single-use data asset</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Biobank_Available_Comment__c</fullName>
        <label>Biobank Available Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Biobank_Available__c</fullName>
        <label>Biobank Available</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Biomarkers_Available__c</fullName>
        <label>Biomarkers Available</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Biomarkers_Details_Comment__c</fullName>
        <label>Biomarkers Details Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Biomarkers_Details__c</fullName>
        <inlineHelpText>Select All that Apply</inlineHelpText>
        <label>Biomarkers Details</label>
        <picklist>
            <picklistValues>
                <fullName>EGFR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HER2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KRAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Biomarkers_available_Comment__c</fullName>
        <label>Biomarkers available Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRP_Data_Available_Comments__c</fullName>
        <label>CRP Data Available Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRP_Data_Available__c</fullName>
        <label>CRP Data Available?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Claims_Type_Comments__c</fullName>
        <label>Claims Type Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Claims_Type__c</fullName>
        <label>Claims Type</label>
        <picklist>
            <controllingField>Type_of_Database__c</controllingField>
            <picklistValues>
                <fullName>Medicare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government (OUS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Clinical_Efficacy_measures_available_Com__c</fullName>
        <label>Clinical Efficacy measures available Com</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Clinical_Efficacy_measures_available__c</fullName>
        <label>Clinical Efficacy measures available</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Coding_System__c</fullName>
        <label>Lab Coding System</label>
        <picklist>
            <picklistValues>
                <fullName>LOINC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JLAC 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Collect_Data_Prospectively_Comment__c</fullName>
        <label>Collect Data Prospectively Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Collect_Data_Prospectively__c</fullName>
        <label>Collect Data Prospectively</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Name_Comment__c</fullName>
        <label>Company Name Comment</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Data_Available_Comment__c</fullName>
        <label>Cost Data Available Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Data_Available__c</fullName>
        <label>Cost Data Available</label>
        <picklist>
            <picklistValues>
                <fullName>Yes - Adjudicated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Non Adjudicated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Data_Detail_Comment__c</fullName>
        <label>Cost Data Detail Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Data_Detail__c</fullName>
        <inlineHelpText>Select All that Apply</inlineHelpText>
        <label>Cost Data Detail</label>
        <picklist>
            <picklistValues>
                <fullName>Prescriptions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procedures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inpatient Costs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outpatient Costs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diagnosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DataLoad_ID__c</fullName>
        <externalId>true</externalId>
        <label>DataLoad ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Asset_Name_Comment__c</fullName>
        <label>Data Asset Name Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Data_Asset_Vendor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Asset Vendor Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RWE Data Assets</relationshipLabel>
        <relationshipName>PANG_Data_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Base_structure__c</fullName>
        <inlineHelpText>flat file, SAS, relational, etc</inlineHelpText>
        <label>Data Base structure</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Continuity_Comment__c</fullName>
        <label>Data Continuity Comment</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Continuity__c</fullName>
        <label>Data Continuity</label>
        <picklist>
            <picklistValues>
                <fullName>Longitudinal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross-Section</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_De_Identified_Comment__c</fullName>
        <label>Data De-Identified Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Data_De_Identified__c</fullName>
        <label>Data De-Identified</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Steward__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>For In-House Databases Only</inlineHelpText>
        <label>Data Steward</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RWE_Data_Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_linked_Comment__c</fullName>
        <label>Data linked Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_linked__c</fullName>
        <label>Data linked</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Demographics_Comment__c</fullName>
        <label>Demographics Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Demographics__c</fullName>
        <inlineHelpText>Select All that Apply</inlineHelpText>
        <label>Demographics</label>
        <picklist>
            <picklistValues>
                <fullName>Age</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Race/Ethnicity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Socioeconomic Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geographic Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Description_of_Database_Comment__c</fullName>
        <label>Description of Database Comment</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_Database__c</fullName>
        <label>Description of Database</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Diagnosis_Coding_Systems_Comment__c</fullName>
        <label>Diagnosis Coding Systems Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Diagnosis_Coding_Systems__c</fullName>
        <inlineHelpText>Select All that Apply</inlineHelpText>
        <label>Diagnosis Coding Systems</label>
        <picklist>
            <picklistValues>
                <fullName>ICD-9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICD-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>READ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SNO MED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Differentiating_Attributes_data_Comments__c</fullName>
        <label>Vendor notes / discussions</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Differentiating_Attributes_of_this_data__c</fullName>
        <label>Differentiating Attributes of this data</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disease_Severity_Available_Comment__c</fullName>
        <inlineHelpText>i.e., staging</inlineHelpText>
        <label>Disease Severity Available Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Disease_Severity_Available__c</fullName>
        <inlineHelpText>i.e., staging</inlineHelpText>
        <label>Disease Severity Available</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disease_Severity_Detail_Comment__c</fullName>
        <label>Disease Severity Detail Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disease_Severity_Detail__c</fullName>
        <inlineHelpText>Select All that Apply</inlineHelpText>
        <label>Disease Severity Detail</label>
        <picklist>
            <picklistValues>
                <fullName>CKD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tumor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Disease_State_Covered_Comment__c</fullName>
        <label>Disease State Covered Comment</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disease_State_Covered__c</fullName>
        <label>Disease State Covered</label>
        <picklist>
            <picklistValues>
                <fullName>Across Disease States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autoimmune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiovascular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Musculoskeletal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nueroscience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CKD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disease_State_Details_Comment__c</fullName>
        <label>Disease State Details Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disease_State_Details__c</fullName>
        <label>Disease State Details</label>
        <picklist>
            <picklistValues>
                <fullName>ADHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alzheimer&apos;s Disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gastric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lupus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migraine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSCLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psoriasis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rheumatoid Arthritis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soft Tissue Sarcoma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dose_Data_Available_Comments__c</fullName>
        <label>Dose Data Available Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dose_Data_Available__c</fullName>
        <label>Dose Data Available?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Drugs_Dispensed_Data_Available_Comments__c</fullName>
        <label>Drugs Dispensed Data Available Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drugs_Dispensed_Data_Available__c</fullName>
        <label>Drugs Dispensed Data Available?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Drugs_Prescribed_Data_Available_Comments__c</fullName>
        <label>Drugs Prescribed Data Available Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drugs_Prescribed_Data_Available__c</fullName>
        <label>Drugs Prescribed Data Available?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Duration_Data_Available_Comments__c</fullName>
        <label>Duration Data Available Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Duration_Data_Available__c</fullName>
        <label>Duration Data Available?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EGFR_Data_Available_Comments__c</fullName>
        <label>EGFR Data Available Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EGFR_Data_Available__c</fullName>
        <label>EGFR Data Available?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ESR_Data_Available_Comments__c</fullName>
        <label>ESR Data Available Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ESR_Data_Available__c</fullName>
        <label>ESR Data Available?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Data_Comment__c</fullName>
        <label>End Data Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>If Applicable</inlineHelpText>
        <label>End Date</label>
        <picklist>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enrollment_Most_Recent_2_Year_Comment__c</fullName>
        <label>Enrollment (Most Recent 2 Year) Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Enrollment_Most_Recent_2_Year__c</fullName>
        <inlineHelpText>Number of Patient Lives</inlineHelpText>
        <label>Enrollment (Most Recent 2 Year)</label>
        <picklist>
            <picklistValues>
                <fullName>1-10,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10,001- 100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100,001 - 500,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500,001 - 2 million</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 million - 10 million</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 million - 25 million</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 25 million</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enrollment_Number_Of_Patients__c</fullName>
        <label>Enrollment(Number Of Patients)</label>
        <picklist>
            <picklistValues>
                <fullName>1-100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100,001-500,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500,001-2 Million</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Million- 10 Million</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 Million - 25 Million</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 25 Million</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enrollment_Number_of_Patients_Comment__c</fullName>
        <label>Enrollment Number of Patients Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Evaluation_Comments__c</fullName>
        <label>Evaluation Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Evaluation_Rating_Comment__c</fullName>
        <label>Evaluation Rating Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Evaluation_Rating__c</fullName>
        <label>Evaluation Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>